Issue #863 fix: grid checkbox spacing

--- a/org.ekstep.questionunit.mcq-1.0/renderer/styles/style.css
+++ b/org.ekstep.questionunit.mcq-1.0/renderer/styles/style.css
@@ -94,7 +94,9 @@ header.qc-long-text-header {
     position: relative;
     padding: -2% 1% 2% 9%;
 }
-
+.grid-check-space{
+    max-width: 50%;
+}
 input.qc-option-input-checkbox {
     -webkit-appearance: checkbox;
     -moz-appearance: checkbox;
